// Jest Snapshot v1, https://goo.gl/fbAQLP

exports[`pages/users/_id/dws-subsidies/_subsidyId/index.vue should be rendered correctly 1`] = `
<div
  breadcrumbs="[object Object],[object Object],[object Object]"
  class="z-page-stub"
  compact="compact"
>
  <div
    class="z-page-stub-slot-tabs"
  />
  <div
    class="z-page-stub-slot-title"
  />
  <z-user-summary-stub
    user="[object Object]"
  />
  <div
    class="z-data-card-stub"
    data-data-card=""
    title="自治体助成情報"
  >
    <div
      class="z-data-card-stub-slot-actions"
    />
    <z-data-card-item-stub
      icon="M19,19H5V8H19M16,1V3H8V1H6V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3H18V1M17,12H12V17H17V12Z"
      label="適用期間"
      value="10"
    >
      <time
        datetime="1983-05-01"
      >
        昭和58年5月1日
      </time>
      <span>
        〜
      </span>
      <time
        datetime="2020-07-21"
      >
        令和2年7月21日
      </time>
    </z-data-card-item-stub>
    <z-data-card-item-stub
      icon="M15,23H13V21H15V23M19,21H17V23H19V21M15,17H13V19H15V17M7,21H5V23H7V21M7,17H5V19H7V17M19,17H17V19H19V17M15,13H13V15H15V13M19,13H17V15H19V13M21,9A2,2 0 0,1 23,11V23H21V11H11V23H9V15H3V23H1V15A2,2 0 0,1 3,13H9V11A2,2 0 0,1 11,9V7A2,2 0 0,1 13,5H15V1H17V5H19A2,2 0 0,1 21,7V9M19,9V7H13V9H19Z"
      label="助成自治体名"
      value="羽咋市"
    />
    <z-data-card-item-stub
      label="助成自治体番号"
      value="714798"
    />
    <z-data-card-item-stub
      icon="M11.19,2.25C10.93,2.25 10.67,2.31 10.42,2.4L3.06,5.45C2.04,5.87 1.55,7.04 1.97,8.05L6.93,20C7.24,20.77 7.97,21.23 8.74,21.25C9,21.25 9.27,21.22 9.53,21.1L16.9,18.05C17.65,17.74 18.11,17 18.13,16.25C18.14,16 18.09,15.71 18,15.45L13,3.5C12.71,2.73 11.97,2.26 11.19,2.25M14.67,2.25L18.12,10.6V4.25A2,2 0 0,0 16.12,2.25M20.13,3.79V12.82L22.56,6.96C22.97,5.94 22.5,4.78 21.47,4.36M11.19,4.22L16.17,16.24L8.78,19.3L3.8,7.29"
      label="給付方式"
      value="定率給付"
    />
    <z-data-card-item-stub
      icon="M11,2V22C5.9,21.5 2,17.2 2,12C2,6.8 5.9,2.5 11,2M13,2V11H22C21.5,6.2 17.8,2.5 13,2M13,13V22C17.7,21.5 21.5,17.8 22,13H13Z"
      label="給付率"
      value="94%"
    >
        未設定の94%を自治体が負担する
    </z-data-card-item-stub>
    <z-data-card-item-stub
      label="端数処理"
      value="切り上げ"
    />
    <z-data-card-item-stub
      icon="M21,6V8H3V6H21M3,18H12V16H3V18M3,13H21V11H3V13Z"
      label="備考"
      value="備考"
    />
    <div
      class="z-data-card-stub-slot-header"
    />
  </div>
  <z-system-meta-card-stub
    createdat="1992-11-15T19:47:52+0900"
    id="10"
    updatedat="1985-11-14T13:24:04+0900"
  />
  <a
    bottom=""
    class="z-fab-stub"
    data-fab=""
    fixed=""
    icon="M20.71,7.04C21.1,6.65 21.1,6 20.71,5.63L18.37,3.29C18,2.9 17.35,2.9 16.96,3.29L15.12,5.12L18.87,8.87M3,17.25V21H6.75L17.81,9.93L14.06,6.18L3,17.25Z"
    nuxt=""
    right=""
    to="/users/1/dws-subsidies/10/edit"
  />
</div>
`;

exports[`pages/users/_id/dws-subsidies/_subsidyId/index.vue z-data-card-item（自治体助成情報） should be rendered z-data-card-item（定率負担） when userDwsSubsidyType is 4 1`] = `
<div
  class="z-data-card-stub"
  data-data-card=""
  title="自治体助成情報"
>
  <div
    class="z-data-card-stub-slot-actions"
  />
  <z-data-card-item-stub
    icon="M19,19H5V8H19M16,1V3H8V1H6V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3H18V1M17,12H12V17H17V12Z"
    label="適用期間"
    value="10"
  >
    <time
      datetime="1983-05-01"
    >
      昭和58年5月1日
    </time>
    <span>
      〜
    </span>
    <time
      datetime="2020-07-21"
    >
      令和2年7月21日
    </time>
  </z-data-card-item-stub>
  <z-data-card-item-stub
    icon="M15,23H13V21H15V23M19,21H17V23H19V21M15,17H13V19H15V17M7,21H5V23H7V21M7,17H5V19H7V17M19,17H17V19H19V17M15,13H13V15H15V13M19,13H17V15H19V13M21,9A2,2 0 0,1 23,11V23H21V11H11V23H9V15H3V23H1V15A2,2 0 0,1 3,13H9V11A2,2 0 0,1 11,9V7A2,2 0 0,1 13,5H15V1H17V5H19A2,2 0 0,1 21,7V9M19,9V7H13V9H19Z"
    label="助成自治体名"
    value="羽咋市"
  />
  <z-data-card-item-stub
    label="助成自治体番号"
    value="714798"
  />
  <z-data-card-item-stub
    icon="M11.19,2.25C10.93,2.25 10.67,2.31 10.42,2.4L3.06,5.45C2.04,5.87 1.55,7.04 1.97,8.05L6.93,20C7.24,20.77 7.97,21.23 8.74,21.25C9,21.25 9.27,21.22 9.53,21.1L16.9,18.05C17.65,17.74 18.11,17 18.13,16.25C18.14,16 18.09,15.71 18,15.45L13,3.5C12.71,2.73 11.97,2.26 11.19,2.25M14.67,2.25L18.12,10.6V4.25A2,2 0 0,0 16.12,2.25M20.13,3.79V12.82L22.56,6.96C22.97,5.94 22.5,4.78 21.47,4.36M11.19,4.22L16.17,16.24L8.78,19.3L3.8,7.29"
    label="給付方式"
    value="定率負担"
  />
  <z-data-card-item-stub
    icon="M11,2V22C5.9,21.5 2,17.2 2,12C2,6.8 5.9,2.5 11,2M13,2V11H22C21.5,6.2 17.8,2.5 13,2M13,13V22C17.7,21.5 21.5,17.8 22,13H13Z"
    label="負担率"
  >
        利用者負担額を未設定の0%に軽減する
  </z-data-card-item-stub>
  <z-data-card-item-stub
    label="端数処理"
    value="四捨五入"
  />
  <z-data-card-item-stub
    icon="M21,6V8H3V6H21M3,18H12V16H3V18M3,13H21V11H3V13Z"
    label="備考"
    value="備考"
  />
  <div
    class="z-data-card-stub-slot-header"
  />
</div>
`;

exports[`pages/users/_id/dws-subsidies/_subsidyId/index.vue z-data-card-item（自治体助成情報） should be rendered z-data-card-item（本人負担額） when userDwsSubsidyType is 3 1`] = `
<div
  class="z-data-card-stub"
  data-data-card=""
  title="自治体助成情報"
>
  <div
    class="z-data-card-stub-slot-actions"
  />
  <z-data-card-item-stub
    icon="M19,19H5V8H19M16,1V3H8V1H6V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3H18V1M17,12H12V17H17V12Z"
    label="適用期間"
    value="10"
  >
    <time
      datetime="1983-05-01"
    >
      昭和58年5月1日
    </time>
    <span>
      〜
    </span>
    <time
      datetime="2020-07-21"
    >
      令和2年7月21日
    </time>
  </z-data-card-item-stub>
  <z-data-card-item-stub
    icon="M15,23H13V21H15V23M19,21H17V23H19V21M15,17H13V19H15V17M7,21H5V23H7V21M7,17H5V19H7V17M19,17H17V19H19V17M15,13H13V15H15V13M19,13H17V15H19V13M21,9A2,2 0 0,1 23,11V23H21V11H11V23H9V15H3V23H1V15A2,2 0 0,1 3,13H9V11A2,2 0 0,1 11,9V7A2,2 0 0,1 13,5H15V1H17V5H19A2,2 0 0,1 21,7V9M19,9V7H13V9H19Z"
    label="助成自治体名"
    value="羽咋市"
  />
  <z-data-card-item-stub
    label="助成自治体番号"
    value="714798"
  />
  <z-data-card-item-stub
    icon="M11.19,2.25C10.93,2.25 10.67,2.31 10.42,2.4L3.06,5.45C2.04,5.87 1.55,7.04 1.97,8.05L6.93,20C7.24,20.77 7.97,21.23 8.74,21.25C9,21.25 9.27,21.22 9.53,21.1L16.9,18.05C17.65,17.74 18.11,17 18.13,16.25C18.14,16 18.09,15.71 18,15.45L13,3.5C12.71,2.73 11.97,2.26 11.19,2.25M14.67,2.25L18.12,10.6V4.25A2,2 0 0,0 16.12,2.25M20.13,3.79V12.82L22.56,6.96C22.97,5.94 22.5,4.78 21.47,4.36M11.19,4.22L16.17,16.24L8.78,19.3L3.8,7.29"
    label="給付方式"
    value="定額負担"
  />
  <z-data-card-item-stub
    icon="M13.92 11H18V13H13V15H18V17H13V21H11V17H6V15H11V13H6V11H10.08L5 3H7.37L12 10.29L16.63 3H19L13.92 11Z"
    label="本人負担額"
    value="1,710円"
  />
  <z-data-card-item-stub
    icon="M21,6V8H3V6H21M3,18H12V16H3V18M3,13H21V11H3V13Z"
    label="備考"
    value="備考"
  />
  <div
    class="z-data-card-stub-slot-header"
  />
</div>
`;

exports[`pages/users/_id/dws-subsidies/_subsidyId/index.vue z-data-card-item（自治体助成情報） should be rendered z-data-card-item（給付率） when userDwsSubsidyType is 1 1`] = `
<div
  class="z-data-card-stub"
  data-data-card=""
  title="自治体助成情報"
>
  <div
    class="z-data-card-stub-slot-actions"
  />
  <z-data-card-item-stub
    icon="M19,19H5V8H19M16,1V3H8V1H6V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3H18V1M17,12H12V17H17V12Z"
    label="適用期間"
    value="10"
  >
    <time
      datetime="1983-05-01"
    >
      昭和58年5月1日
    </time>
    <span>
      〜
    </span>
    <time
      datetime="2020-07-21"
    >
      令和2年7月21日
    </time>
  </z-data-card-item-stub>
  <z-data-card-item-stub
    icon="M15,23H13V21H15V23M19,21H17V23H19V21M15,17H13V19H15V17M7,21H5V23H7V21M7,17H5V19H7V17M19,17H17V19H19V17M15,13H13V15H15V13M19,13H17V15H19V13M21,9A2,2 0 0,1 23,11V23H21V11H11V23H9V15H3V23H1V15A2,2 0 0,1 3,13H9V11A2,2 0 0,1 11,9V7A2,2 0 0,1 13,5H15V1H17V5H19A2,2 0 0,1 21,7V9M19,9V7H13V9H19Z"
    label="助成自治体名"
    value="羽咋市"
  />
  <z-data-card-item-stub
    label="助成自治体番号"
    value="714798"
  />
  <z-data-card-item-stub
    icon="M11.19,2.25C10.93,2.25 10.67,2.31 10.42,2.4L3.06,5.45C2.04,5.87 1.55,7.04 1.97,8.05L6.93,20C7.24,20.77 7.97,21.23 8.74,21.25C9,21.25 9.27,21.22 9.53,21.1L16.9,18.05C17.65,17.74 18.11,17 18.13,16.25C18.14,16 18.09,15.71 18,15.45L13,3.5C12.71,2.73 11.97,2.26 11.19,2.25M14.67,2.25L18.12,10.6V4.25A2,2 0 0,0 16.12,2.25M20.13,3.79V12.82L22.56,6.96C22.97,5.94 22.5,4.78 21.47,4.36M11.19,4.22L16.17,16.24L8.78,19.3L3.8,7.29"
    label="給付方式"
    value="定率給付"
  />
  <z-data-card-item-stub
    icon="M11,2V22C5.9,21.5 2,17.2 2,12C2,6.8 5.9,2.5 11,2M13,2V11H22C21.5,6.2 17.8,2.5 13,2M13,13V22C17.7,21.5 21.5,17.8 22,13H13Z"
    label="給付率"
    value="94%"
  >
        未設定の94%を自治体が負担する
  </z-data-card-item-stub>
  <z-data-card-item-stub
    label="端数処理"
    value="切り上げ"
  />
  <z-data-card-item-stub
    icon="M21,6V8H3V6H21M3,18H12V16H3V18M3,13H21V11H3V13Z"
    label="備考"
    value="備考"
  />
  <div
    class="z-data-card-stub-slot-header"
  />
</div>
`;

exports[`pages/users/_id/dws-subsidies/_subsidyId/index.vue z-data-card-item（自治体助成情報） should be rendered z-data-card-item（給付額） when userDwsSubsidyType is 2 1`] = `
<div
  class="z-data-card-stub"
  data-data-card=""
  title="自治体助成情報"
>
  <div
    class="z-data-card-stub-slot-actions"
  />
  <z-data-card-item-stub
    icon="M19,19H5V8H19M16,1V3H8V1H6V3H5C3.89,3 3,3.89 3,5V19A2,2 0 0,0 5,21H19A2,2 0 0,0 21,19V5C21,3.89 20.1,3 19,3H18V1M17,12H12V17H17V12Z"
    label="適用期間"
    value="10"
  >
    <time
      datetime="1983-05-01"
    >
      昭和58年5月1日
    </time>
    <span>
      〜
    </span>
    <time
      datetime="2020-07-21"
    >
      令和2年7月21日
    </time>
  </z-data-card-item-stub>
  <z-data-card-item-stub
    icon="M15,23H13V21H15V23M19,21H17V23H19V21M15,17H13V19H15V17M7,21H5V23H7V21M7,17H5V19H7V17M19,17H17V19H19V17M15,13H13V15H15V13M19,13H17V15H19V13M21,9A2,2 0 0,1 23,11V23H21V11H11V23H9V15H3V23H1V15A2,2 0 0,1 3,13H9V11A2,2 0 0,1 11,9V7A2,2 0 0,1 13,5H15V1H17V5H19A2,2 0 0,1 21,7V9M19,9V7H13V9H19Z"
    label="助成自治体名"
    value="羽咋市"
  />
  <z-data-card-item-stub
    label="助成自治体番号"
    value="714798"
  />
  <z-data-card-item-stub
    icon="M11.19,2.25C10.93,2.25 10.67,2.31 10.42,2.4L3.06,5.45C2.04,5.87 1.55,7.04 1.97,8.05L6.93,20C7.24,20.77 7.97,21.23 8.74,21.25C9,21.25 9.27,21.22 9.53,21.1L16.9,18.05C17.65,17.74 18.11,17 18.13,16.25C18.14,16 18.09,15.71 18,15.45L13,3.5C12.71,2.73 11.97,2.26 11.19,2.25M14.67,2.25L18.12,10.6V4.25A2,2 0 0,0 16.12,2.25M20.13,3.79V12.82L22.56,6.96C22.97,5.94 22.5,4.78 21.47,4.36M11.19,4.22L16.17,16.24L8.78,19.3L3.8,7.29"
    label="給付方式"
    value="定額給付"
  />
  <z-data-card-item-stub
    icon="M13.92 11H18V13H13V15H18V17H13V21H11V17H6V15H11V13H6V11H10.08L5 3H7.37L12 10.29L16.63 3H19L13.92 11Z"
    label="給付額"
    value="1,710円"
  />
  <z-data-card-item-stub
    icon="M21,6V8H3V6H21M3,18H12V16H3V18M3,13H21V11H3V13Z"
    label="備考"
    value="備考"
  />
  <div
    class="z-data-card-stub-slot-header"
  />
</div>
`;
